--- a/package.json
+++ b/package.json
@@ -1,17 +1,21 @@
 {
-  "name": "telegram-bot-test",
-  "version": "0.0.0",
-  "private": true,
+  "name": "telegrambot",
+  "version": "1.0.0",
+  "main": "up.json",
   "scripts": {
-    "start": "node ./bin/www"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
-    "express": "~4.16.1",
-    "http-errors": "~1.6.3",
-    "morgan": "~1.9.1",
-    "pug": "2.0.0-beta11",
-    "telegram-bot-api": "^1.3.3"
-  }
+    "express": "^4.16.3",
+    "mongodb": "^3.1.1",
+    "mysql": "^2.15.0",
+    "node-telegram-bot-api": "^0.30.0"
+  },
+  "engines": {
+    "node": ">=5.6.0"
+  },
+  "description": ""
 }
